Upgrade Materializecss to 1.0 beta version Adding location detail html

--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,19 @@
 <html>
 
 <head>
-    <meta charset="utf-8"/>
-    <meta name="format-detection" content="telephone=yes"/>
-    <meta name="msapplication-tap-highlight" content="no"/>
-    <meta name="viewport"
-          content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
-    <link rel="stylesheet" type="text/css" href="css/materialize.min.css"/>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=yes" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+    <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <!--    <link rel="stylesheet" type="text/css" href="css/index.css"/>-->
     <title>Hello World</title>
 </head>
 
 <body>
-<!--New Version-->
+    <!--New Version-->
+    <!--
 <div class="navbar-fixed">
     <nav class="nav-extended">
         <div class="nav-top">
@@ -53,112 +53,104 @@
         </div>
     </nav>
 </div>
-<div class="page-container">
-    <div id="popular" class="col s12">
-        <div class="row">
-            <div class="col s6">
-                <a href="login.html">
-                    <div class="card short-cart">
-                        <div class="card-image">
-                            <img src="img/bai-bien-ky-co-475.jpeg">
-                        </div>
-                        <div class="card-content">
-                            <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                            <p>Nhơn Lý, Bình Định</p>
-
-                            <div class="user-interaction">
-                                <div class="col s9 offset-s3">
-                                    <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png">
-                                    <span class="fav-num">123</span>
-                                    <span>&ensp;</span>
-                                    <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png">
-                                    <span class="mess-num">123</span>
+-->
+    <div class="navbar-fixed">
+        <nav class="nav-extended">
+            <div class="nav-wrapper"> <a href="#" class="brand-logo">Logo</a> <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="sass.html">Sass</a></li>
+                    <li><a href="badges.html">Components</a></li>
+                    <li><a href="collapsible.html">JavaScript</a></li>
+                </ul>
+            </div>
+            <div class="nav-content">
+                <ul class="tabs tabs-transparent">
+                    <li class="tab"><a href="#test1">Test 1</a></li>
+                    <li class="tab"><a class="active" href="#test2">Test 2</a></li>
+                    <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
+                    <li class="tab"><a href="#test4">Test 4</a></li>
+                </ul>
+            </div>
+        </nav>
+        <ul class="sidenav" id="mobile-demo">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+        <div id="test1" class="col s12">Test 1</div>
+        <div id="test2" class="col s12">Test 2</div>
+        <div id="test3" class="col s12">Test 3</div>
+        <div id="test4" class="col s12">Test 4</div>
+    </div>
+    <div class="page-container">
+        <div id="popular" class="col s12">
+            <div class="row">
+                <div class="col s6">
+                    <a href="login.html">
+                        <div class="card short-cart">
+                            <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
+                            <div class="card-content">
+                                <p class="card-content-title">Eo Gió - Kỳ Co</p>
+                                <p>Nhơn Lý, Bình Định</p>
+                                <div class="user-interaction">
+                                    <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col s6">
-                <a href="location-detail.html">
-                    <div class="card short-cart">
-                        <div class="card-image">
-                            <img src="img/bai-bien-ky-co-475.jpeg">
-                        </div>
-                        <div class="card-content">
-                            <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                            <p>Nhơn Lý, Bình Định</p>
-
-                            <div class="user-interaction">
-                                <div class="col s9 offset-s3">
-                                    <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png">
-                                    <span class="fav-num">123</span>
-                                    <span>&ensp;</span>
-                                    <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png">
-                                    <span class="mess-num">123</span>
+                    </a>
+                </div>
+                <div class="col s6">
+                    <a href="location-detail.html">
+                        <div class="card short-cart">
+                            <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
+                            <div class="card-content">
+                                <p class="card-content-title">Eo Gió - Kỳ Co</p>
+                                <p>Nhơn Lý, Bình Định</p>
+                                <div class="user-interaction">
+                                    <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col s6">
-                <div class="card short-cart">
-                    <div class="card-image">
-                        <img src="img/bai-bien-ky-co-475.jpeg">
-                    </div>
-                    <div class="card-content">
-                        <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                        <p>Nhơn Lý, Bình Định</p>
-
-                        <div class="user-interaction">
-                            <div class="col s9 offset-s3">
-                                <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png">
-                                <span class="fav-num">123</span>
-                                <span>&ensp;</span>
-                                <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png">
-                                <span class="mess-num">123</span>
+                    </a>
+                </div>
+                <div class="col s6">
+                    <div class="card short-cart">
+                        <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
+                        <div class="card-content">
+                            <p class="card-content-title">Eo Gió - Kỳ Co</p>
+                            <p>Nhơn Lý, Bình Định</p>
+                            <div class="user-interaction">
+                                <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col s6">
-                <div class="card short-cart">
-                    <div class="card-image">
-                        <img src="img/bai-bien-ky-co-475.jpeg">
-                    </div>
-                    <div class="card-content">
-                        <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                        <p>Nhơn Lý, Bình Định</p>
-
-                        <div class="user-interaction">
-                            <div class="col s9 offset-s3">
-                                <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png">
-                                <span class="fav-num">123</span>
-                                <span>&ensp;</span>
-                                <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png">
-                                <span class="mess-num">123</span>
+                <div class="col s6">
+                    <div class="card short-cart">
+                        <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
+                        <div class="card-content">
+                            <p class="card-content-title">Eo Gió - Kỳ Co</p>
+                            <p>Nhơn Lý, Bình Định</p>
+                            <div class="user-interaction">
+                                <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="near-you" class="col s12">
-        <div class="row">
-            <div class="col s6">6-columns (one-half)</div>
-            <div class="col s6">6-columns (one-half)</div>
+        <div id="near-you" class="col s12">
+            <div class="row">
+                <div class="col s6">6-columns (one-half)</div>
+                <div class="col s6">6-columns (one-half)</div>
+            </div>
         </div>
     </div>
-</div>
-
-<!--End new version-->
-<script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+    <!--End new version-->
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
