--- a/www/location-detail.html
+++ b/www/location-detail.html
@@ -1,87 +1,75 @@
 <html>
 
 <head>
-    <meta charset="utf-8"/>
-    <meta name="format-detection" content="telephone=yes"/>
-    <meta name="msapplication-tap-highlight" content="no"/>
-    <meta name="viewport"
-          content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
-    <link rel="stylesheet" type="text/css" href="css/materialize.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/location-detail.css"/>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=yes" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+    <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/location-detail.css" />
     <title>Hello World</title>
 </head>
 
 <body>
-
-<div class="card">
-    <div class="card-image">
-        <img src="img/14_hoa_tam_giac_mach.jpg">
-    </div>
-    <div class="card-content">
-        <b class="location-name">Đồi hoa tam giác mạch</b>
-        <p>Hà Giang, Việt Nam</p>
-        <div class="row interaction-count">
-            <div class="col s6 left-align">
-                <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png">
-                <span class="fav-num">123</span>
-                <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png">
-                <span class="mess-num">123</span>
-            </div>
-            <div class="col s6 right-align">
-                <div class="chip wish-list">
-                    <i class="fas fa-bookmark"></i>
-                    <text>Lưu</text>
+    <div class="card">
+        <div class="card-image">
+            <div class="carousel carousel-slider center">
+                <div class="carousel-item red white-text" href="#one!">
+                    <h2>First Panel</h2>
+                    <p class="white-text">This is your first panel</p>
                 </div>
-                <div class="chip visited">
-                    <i class="fas fa-map-marker"></i>
-                    <text>Đã đến</text>
+                <div class="carousel-item amber white-text" href="#two!">
+                    <h2>Second Panel</h2>
+                    <p class="white-text">This is your second panel</p>
+                </div>
+                <div class="carousel-item green white-text" href="#three!">
+                    <h2>Third Panel</h2>
+                    <p class="white-text">This is your third panel</p>
+                </div>
+                <div class="carousel-item blue white-text" href="#four!">
+                    <h2>Fourth Panel</h2>
+                    <p class="white-text">This is your fourth panel</p>
                 </div>
             </div>
         </div>
+        <div class="card-content"> <b class="location-name">Đồi hoa tam giác mạch</b>
+            <p>Hà Giang, Việt Nam</p>
+            <div class="row interaction-count">
+                <div class="col s6 left-align"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
+                <div class="col s6 right-align">
+                    <div class="chip wish-list"> <i class="fas fa-bookmark"></i>
+                        <text>Lưu</text>
+                    </div>
+                    <div class="chip visited"> <i class="fas fa-map-marker"></i>
+                        <text>Đã đến</text>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-action">
+            <ul class="collection">
+                <li class="collection-item avatar"> <img src="/img/19420548_1085119481620594_2949424762688684819_n.jpg" alt="" class="circle input-avatar">
+                    <div class="input-field col s6">
+                        <input id="comment" type="text">
+                        <label for="comment">Bình Luận</label>
+                    </div>
+                </li>
+            </ul>
+            <ul class="collection">
+                <li class="collection-item avatar"> <img src="/img/logo.png" alt="" class="circle"> <span class="title"><b>Hoa Nguyễn</b></span>
+                    <p>Tuyệt Đẹp</p>
+                </li>
+                <li class="collection-item avatar"> <img src="/img/19420548_1085119481620594_2949424762688684819_n.jpg" alt="" class="circle"> <span class="title"><b>Gia Hiển</b></span>
+                    <p>Awesome</p>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="card-action">
-        <ul class="collection">
-            <li class="collection-item avatar">
-                <img src="images/yuna.jpg" alt="" class="circle">
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle">folder</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle green">insert_chart</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle red">play_arrow</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-            </li>
-        </ul>
-    </div>
-</div>
-
-<script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript" src="js/location-detail.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/location-detail.js"></script>
 </body>
 
 </html>
