Baonq: Display Spot

--- a/www/index.html
+++ b/www/index.html
@@ -100,7 +100,7 @@
                     </a>
                 </div>
                 <div class="col s6">
-                    <a href="location-detail.html">
+                    <a href="location-detail.html?id=6">
                         <div class="card short-cart">
                             <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
                             <div class="card-content">
