--- a/www/index.html
+++ b/www/index.html
@@ -1,156 +1,168 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="format-detection" content="telephone=yes" />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-    <link rel="stylesheet" type="text/css" href="css/materialize.min.css" />
+    <meta charset="utf-8"/>
+    <meta name="format-detection" content="telephone=yes"/>
+    <meta name="msapplication-tap-highlight" content="no"/>
+    <meta name="viewport"
+          content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
+    <link rel="stylesheet" type="text/css" href="css/materialize.min.css"/>
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
-    <!--    <link rel="stylesheet" type="text/css" href="css/index.css"/>-->
+    <link rel="stylesheet" type="text/css" href="css/index.css"/>
     <title>Hello World</title>
 </head>
 
 <body>
-    <!--New Version-->
-    <!--
+<!-- TOP NAV START -->
 <div class="navbar-fixed">
     <nav class="nav-extended">
         <div class="nav-top">
             <div class="nav-wrapper">
-                <ul id="slide-out" class="side-nav">
-                    <li><a class="waves-effect" href="">Login</a></li>
-                    <li><a class="subheader">Subheader</a></li>
-                    <li>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a class="subheader">Subheader</a></li>
-                    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-                </ul>
-                <a href="#" data-activates="slide-out" class="button-collapse"><i class="fas fa-bars"></i></a>
                 <a href="#" class="brand-logo">ĐỊA ĐIỂM</a>
-                <div class="input-field">
+                <a href="#" data-target="slide-out" class="sidenav-trigger"> <i class="fas fa-bars"></i> </a>
+                <a class="searchnav-trigger right"><i class="fas fa-search"></i></a>
+                <div class="input-field" style="display: none;">
                     <input id="search" type="search" required>
-                    <i id="close-button" class="material-icons">close</i>
-                    <label id="search-button" class="label-icon" for="search"><i class="fas fa-search"></i></label>
+                    <i class="fas fa-times grey-text close-button"></i>
                 </div>
             </div>
             <div class="nav-content">
                 <ul class="tabs tabs-transparent">
-                    <li class="tab"><a class="active" href="#popular">PHỔ BIẾN</a></li>
-                    <li class="tab"><a href="#near-you">GẦN BẠN</a></li>
+                    <li class="tab col s3"><a class="active" href="#test1">PHỔ BIẾN</a></li>
+                    <li class="tab col s3"><a href="#test2">GẦN BẠN</a></li>
                 </ul>
-            </div>
-        </div>
-        <div class="nav-bottom">
-            <div class="nav-wrapper" style="">
-                <a href="#" class="brand-logo center">
-                    <div id="add-location">
-                        <img src="img/Button_11-512.png">
-                    </div>
-                </a>
             </div>
         </div>
     </nav>
 </div>
--->
-    <div class="navbar-fixed">
-        <nav class="nav-extended">
-            <div class="nav-wrapper"> <a href="#" class="brand-logo">Logo</a> <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">JavaScript</a></li>
-                </ul>
-            </div>
-            <div class="nav-content">
-                <ul class="tabs tabs-transparent">
-                    <li class="tab"><a href="#test1">Test 1</a></li>
-                    <li class="tab"><a class="active" href="#test2">Test 2</a></li>
-                    <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
-                    <li class="tab"><a href="#test4">Test 4</a></li>
-                </ul>
-            </div>
-        </nav>
-        <ul class="sidenav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-        <div id="test1" class="col s12">Test 1</div>
-        <div id="test2" class="col s12">Test 2</div>
-        <div id="test3" class="col s12">Test 3</div>
-        <div id="test4" class="col s12">Test 4</div>
+<!-- TOP NAV END -->
+
+<!-- BOTTOM NAV START -->
+<div class="nav-bottom">
+    <div class="nav-content center">
+        <img src="img/Button_11-512.png" id="add-location">
     </div>
-    <div class="page-container">
-        <div id="popular" class="col s12">
-            <div class="row">
-                <div class="col s6">
-                    <a href="login.html">
-                        <div class="card short-cart">
-                            <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
-                            <div class="card-content">
-                                <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                                <p>Nhơn Lý, Bình Định</p>
-                                <div class="user-interaction">
-                                    <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col s6">
-                    <a href="location-detail.html">
-                        <div class="card short-cart">
-                            <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
-                            <div class="card-content">
-                                <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                                <p>Nhơn Lý, Bình Định</p>
-                                <div class="user-interaction">
-                                    <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col s6">
-                    <div class="card short-cart">
-                        <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
-                        <div class="card-content">
-                            <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                            <p>Nhơn Lý, Bình Định</p>
-                            <div class="user-interaction">
-                                <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
-                            </div>
-                        </div>
+</div>
+<!-- BOTTOM NAV END -->
+
+<!-- SLIDER MENU START -->
+<ul id="slide-out" class="sidenav">
+    <li>
+        <div class="user-view center">
+            <a href="#user"><img class="circle" src="img/19420548_1085119481620594_2949424762688684819_n.jpg"></a>
+            <a href="#name"><span class="black-text name">Licod</span></a>
+        </div>
+    </li>
+    <li>
+        <div class="divider"></div>
+    </li>
+    <li>
+        <a class="subheader grey lighten-3">
+            <i class="fas fa-map-marker"></i>Địa Điểm
+        </a>
+    </li>
+    <li>
+        <a href="#!">
+            <i class="fas fa-star"></i>Danh Sách Yêu Thích
+        </a>
+    </li>
+    <li>
+        <a href="#!">
+            <i class="fas fa-book"></i>Nhật Ký
+        </a>
+    </li>
+    <li>
+        <div class="divider"></div>
+    </li>
+    <li>
+        <a class="red-text waves-effect" href="#!">
+            <i class="fas fa-sign-out-alt red-text"></i>Đăng Xuất
+        </a>
+    </li>
+</ul>
+<!-- SLIDER MENU END -->
+
+<!-- CONTENT START -->
+<div class="content">
+    <div id="test1">
+        <div class="row">
+            <div class="col s6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="img/bai-bien-ky-co-475.jpeg">
+                    </div>
+                    <div class="card-content">
+                        <b class="destination-title">Đồi Hoa Tam Giác Mạch</b>
+                        <p>Nghĩa Đàn, Nghệ An</p>
+                    </div>
+                    <div class="user-interaction">
+                        <i class="far fa-heart"></i>
+                        <span class="fav-count">123</span>
+                        <i class="far fa-comment-alt"></i>
+                        <span class="com-count">123</span>
                     </div>
                 </div>
-                <div class="col s6">
-                    <div class="card short-cart">
-                        <div class="card-image"> <img src="img/bai-bien-ky-co-475.jpeg"> </div>
-                        <div class="card-content">
-                            <p class="card-content-title">Eo Gió - Kỳ Co</p>
-                            <p>Nhơn Lý, Bình Định</p>
-                            <div class="user-interaction">
-                                <div class="col s9 offset-s3"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <span>&ensp;</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
-                            </div>
-                        </div>
+            </div>
+            <div class="col s6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="img/bai-bien-ky-co-475.jpeg">
+                    </div>
+                    <div class="card-content">
+                        <b class="destination-title">Đồi Hoa Tam Giác Mạch</b>
+                        <p>Nghĩa Đàn, Nghệ An</p>
+                    </div>
+                    <div class="user-interaction">
+                        <i class="far fa-heart"></i>
+                        <span class="fav-count">123</span>
+                        <i class="far fa-comment-alt"></i>
+                        <span class="com-count">123</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col s6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="img/bai-bien-ky-co-475.jpeg">
+                    </div>
+                    <div class="card-content">
+                        <b class="destination-title">Đồi Hoa Tam Giác Mạch</b>
+                        <p>Nghĩa Đàn, Nghệ An</p>
+                    </div>
+                    <div class="user-interaction">
+                        <i class="far fa-heart"></i>
+                        <span class="fav-count">123</span>
+                        <i class="far fa-comment-alt"></i>
+                        <span class="com-count">123</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col s6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="img/bai-bien-ky-co-475.jpeg">
+                    </div>
+                    <div class="card-content">
+                        <b class="destination-title">Đồi Hoa Tam Giác Mạch</b>
+                        <p>Nghĩa Đàn, Nghệ An</p>
+                    </div>
+                    <div class="user-interaction">
+                        <i class="far fa-heart"></i>
+                        <span class="fav-count">123</span>
+                        <i class="far fa-comment-alt"></i>
+                        <span class="com-count">123</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="near-you" class="col s12">
-            <div class="row">
-                <div class="col s6">6-columns (one-half)</div>
-                <div class="col s6">6-columns (one-half)</div>
-            </div>
-        </div>
     </div>
-    <!--End new version-->
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <div id="test2" class="col s12"> 2</div>
+</div>
+<!-- CONTENT START -->
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
