Baonq: front-end Spot Detail

--- a/www/location-detail.html
+++ b/www/location-detail.html
@@ -14,7 +14,7 @@
 <body>
     <div class="card">
         <div class="card-image">
-            <div class="carousel carousel-slider center">
+            <!-- <div class="carousel carousel-slider center">
                 <div class="carousel-item">
                     <img src="/img/14_hoa_tam_giac_mach.jpg">
                 </div>
@@ -27,10 +27,10 @@
                 <div class="carousel-item">
                     <img src="/img/14_hoa_tam_giac_mach.jpg">
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="card-content"> <b class="location-name">Đồi hoa tam giác mạch</b>
-            <p>Hà Giang, Việt Nam</p>
+            <p id="location-address">Hà Giang, Việt Nam</p>
             <div class="row interaction-count">
                 <div class="col s6 left-align"> <img class="fav-icon" src="img/heart-icon-iloveimg-cropped.png"> <span class="fav-num">123</span> <img class="mess-icon" src="img/message-left-3198c00b4a4d2c10-512x512.png"> <span class="mess-num">123</span> </div>
                 <div class="col s6 right-align">
@@ -45,21 +45,25 @@
         </div>
         <div class="card-action">
             <ul class="collection">
-                <li class="collection-item avatar"> <img src="/img/19420548_1085119481620594_2949424762688684819_n.jpg" alt="" class="circle input-avatar">
+                <li class="collection-item avatar"> 
+                    <img src="/img/19420548_1085119481620594_2949424762688684819_n.jpg" alt="" class="circle input-avatar">
                     <div class="input-field col s6">
                         <input id="comment" type="text">
                         <label for="comment">Bình Luận</label>
                     </div>
                 </li>
             </ul>
-            <ul class="collection">
-                <li class="collection-item avatar"> <img src="/img/logo.png" alt="" class="circle"> <span class="title"><b>Hoa Nguyễn</b></span>
+            <ul class="collection"> 
+                <li class="collection-item avatar">
+                     <img src="/img/logo.png" alt="" class="circle"> <span class="title"><b>Hoa Nguyễn</b></span>
                     <p>Tuyệt Đẹp</p>
                 </li>
-                <li class="collection-item avatar"> <img src="/img/19420548_1085119481620594_2949424762688684819_n.jpg" alt="" class="circle"> <span class="title"><b>Gia Hiển</b></span>
+                <li class="collection-item avatar"> 
+                    <img src="/img/19420548_1085119481620594_2949424762688684819_n.jpg" alt="" class="circle"> <span class="title"><b>Gia Hiển</b></span>
                     <p>Awesome</p>
                 </li>
             </ul>
+          
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
