Login and authorize user using JWT

--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
         <div class="divider"></div>
     </li>
     <li>
-        <a class="red-text waves-effect" href="#!">
+        <a class="red-text waves-effect" href="http://192.168.120.174:8080/logout">
             <i class="fas fa-sign-out-alt red-text"></i>Đăng Xuất
         </a>
     </li>
